syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "../proto";

service Inventory {
    rpc SetInv(GoodsInvInfo) returns(google.protobuf.Empty); //设置库存
    rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo); // 获取库存信息
    rpc Sell(SellInfo) returns (google.protobuf.Empty); //库存预扣减
    rpc Reback(SellInfo) returns(google.protobuf.Empty); //库存归还 用于订单手动取消或超时 归还库存
}

message GoodsInvInfo {
    int32 goodsId = 1;
    int32 num = 2;
}
//支持多商品库存扣减
message SellInfo {
    repeated GoodsInvInfo goodsInfo = 1;
    string orderSn = 2;
}